--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ bind-key a send-prefix # for nested tmux sessions
 # Global options
 ############################################################################
 # large history
-set-option -g history-limit 10000
+set-option -g history-limit 5000
 
  # colors
 setw -g mode-bg black
@@ -17,7 +17,7 @@ set-option -g pane-active-border-fg green
 
 # utf8 support
 set-window-option -g utf8 on
-
+set -g base-index 1
 
 # basic settings
 set-window-option -g xterm-keys on # for vim
@@ -91,14 +91,12 @@ bind-key Enter break-pane
 #bind C-j command-prompt "join-pane"
 #bind-key j command-prompt "join-pane -s '%%'"
 #bind-key j command-prompt "joinp -t:0"
-bind-key Space command-prompt "joinp -t:%%" # %% = prompt for window.pane [-V|H] # vert|hor split
+#bind-key Space command-prompt "joinp -t:%%" # %% = prompt for window.pane [-V|H] # vert|hor split
 
 #previous pane
 bind-key -n C-up prev
-bind-key -n C-left prev
 
 #next pane
-bind-key -n C-right next
 bind-key -n C-down next
 
 ############################################################################
